test/fail/inheritance/inherit_variant.lly
#[
SyntaxError: 'None' cannot be inherited from.
    from inherit_variant.lly:11
]#

enum Option[A] {
    Some(A)
    None
}

class example() < None { }
